# tremors-music

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  TASKS.md  package-lock.json  package.json  tremors-music-tree.txt
backend/: backend.spec  backend_build.py  database.py  main.py  migrate_db.py  models.py  pyproject.toml  scanner.py  scanner_progress.py  streamer.py
backend/router/: library.py  media.py  playlists.py  stream.py
frontend/: eslint-output.json  eslint-report.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AddToPlaylistModal.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CreatePlaylistModal.tsx  ErrorBoundary.tsx  FullScreenPlayer.tsx  PageWrapper.tsx  Player.tsx  SettingsModal.tsx  Sidebar.tsx  Skeletons.tsx  SongList.tsx  SquigglyProgress.tsx  ToastContainer.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  IconButton.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: animations.ts  api.ts  utils.ts
frontend/src/pages/: AlbumDetail.tsx  AlbumsPage.tsx  AllPlaylistsPage.tsx  ArtistDetail.tsx  ArtistsPage.tsx  GenreDetail.tsx  GenresPage.tsx  LibraryPage.tsx  PlaylistDetail.tsx  SearchPage.tsx  SettingsPage.tsx  SmartPlaylistDetail.tsx
frontend/src/stores/: confirmStore.ts  filterStore.ts  playerStore.ts  themeStore.ts  toastStore.ts
scripts/: build-backend.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tauri/: package-lock.json  package.json
tauri/scripts/: build-backend.mjs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs
(+6 files in other folders)
