[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.121.3",
    "mutagen>=1.47.0",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
