[package]
name = "tremors-music"
version = "2.0.0"
description = "A high-performance, local-first music player"
authors = ["Tremors"]
license = "MIT"
repository = "https://github.com/qtremors/tremors-music"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
